# ohlcv

./: .gitignore  Cargo.toml  README.md
ohlcv/: CHANGELOG.md  Cargo.toml  README.md
ohlcv-ctl/: CHANGELOG.md  Cargo.toml  README.md
ohlcv-ctl/src/: config.rs  error.rs  lib.rs  main.rs
ohlcv-ctl/src/cli/: mod.rs
ohlcv-ctl/src/cli/command/: drop.rs  fetch.rs  init.rs  mod.rs
ohlcv/src/: basetypes.rs  candle.rs  coin.rs  error.rs  lib.rs
ohlcv/src/database/: credentials.rs  dbtype.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
ohlcv/src/exchange/: mod.rs
scripts/mariadb/: createdb  dbshell  mariadb.env  removedb  startdb  stopdb
scripts/mysql/: createdb  dbshell  mysql.env  ohlcv-ctl.toml  removedb  startdb  stopdb
scripts/postgres/: createdb  dbshell  ohlcv-ctl.toml  removedb  startdb  stopdb
scripts/postgres/initdb/: ohlcv-init.sql
scripts/sqlite/: dbshell  ohlcv-ctl.toml
