[package]
name = "ohlcv-ctl"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TypedDuck <typedduck@posteo.net>"]
homepage = "https://github.com/typedduck/ohlc"
repository = "https://github.com/typedduck/ohlc"
description = "Data collector library for fetching, analyzing, predicting and charting time series data (OHLC) of cryptocurrencies from various exchanges"
categories = [
    "command-line-utilities",
    "cryptography::cryptocurrencies",
    "finance",
]
keywords = ["cryptocurrency", "exchange", "finance", "ohlcv", "time-series"]
readme = "README.md"
include = ["LICENSE-*", "README.md", "CHANGELOG.md", "Cargo.toml", "/src"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
pedantic = "warn"
cargo = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
nursery = "warn"

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["ohlcv/mysql"]
postgres = ["ohlcv/postgres"]
sqlite = ["ohlcv/sqlite"]

[dependencies]
clap = { version = "4.5.11", features = ["cargo"] }
inquire = "0.7.5"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.16"
tracing = { version = "0.1.40", features = [
    "release_max_level_info",
    "max_level_trace",
] }
tracing-subscriber = "0.3.18"

[dependencies.ohlcv]
version = "0.0.2"
path = "../ohlcv"
optional = true
default-features = false
features = ["exchange"]
